--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Salespop"
         tools:targetApi="31">
         <activity
+            android:name=".activities.CategoryListActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.DetailProductActivity"
             android:exported="false" />
         <activity
@@ -27,10 +30,10 @@
         </activity>
         <activity
             android:name=".activities.LoginActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".activities.SignUpActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
 
         <meta-data
             android:name="preloaded_fonts"
